[package]
name = "lox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
phf = { version = "0.11.2", features = ["macros"] }
thiserror = "1.0.64"
